:memo: 更新接口文档及整合redisTemplate
